[tool.poetry]
name = "python-streamlit"
version = "0.1.0"
description = ""
authors = ["alextanhongpin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
plotly = "^6.0.0"
black = "^25.1.0"
scipy = "^1.15.2"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
